--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
 						class="toggle-btn"
 						src="./images/svg/toggle.svg"
 						alt="toggle" />
-					<img
-						src="./images/svg/logo.svg"
-						alt="logo"
-						width="107.8"
-						height="28.5" />
+					<a href="./index.html">
+						<img
+							src="./images/svg/logo.svg"
+							alt="logo"
+							width="107.8"
+							height="28.5" />
+					</a>
 					<div class="header__block hidden smooth">
 						<nav class="header__nav">
 							<ul class="header__nav-list">
 								<li class="header__nav-item">
-									<a class="header__nav-link" href="">
+									<a
+										class="header__nav-link"
+										href="./pages/about.html">
 										About
 									</a>
 								</li>
@@ -54,17 +58,19 @@
 				<div class="hero__block">
 					<div class="container">
 						<div class="hero__info">
-							<h1 class="hero__title title">
-								Scooter sharing made simple
-							</h1>
-							<p class="hero__subtitle">
-								Scoot takes the hassle out of urban mobility.
-								Our bikes are placed in convenient locations in
-								each of our cities. Use our app to locate the
-								nearest bike, unlock it with a tap, and you’re
-								away!
-							</p>
-							<a class="hero__btn btn" href="">Get Scootin</a>
+							<div class="hero__info-block">
+								<h1 class="hero__title title">
+									Scooter sharing made simple
+								</h1>
+								<p class="hero__subtitle">
+									Scoot takes the hassle out of urban
+									mobility. Our bikes are placed in convenient
+									locations in each of our cities. Use our app
+									to locate the nearest bike, unlock it with a
+									tap, and you’re away!
+								</p>
+								<a class="hero__btn btn" href="">Get Scootin</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -229,7 +235,7 @@
 						<div class="logo-nav">
 							<a href=""
 								><img
-                                class="footer__logo"
+									class="footer__logo"
 									src="./images/svg/logo-white.svg"
 									alt="logo-white"
 							/></a>
