--- a/index.html
+++ b/index.html
@@ -241,15 +241,25 @@
 							/></a>
 							<ul class="footer__list">
 								<li class="footer__item">
-									<a href="" class="footer__link"> About</a>
+									<a
+										href="./pages/about.html"
+										class="footer__link">
+										About</a
+									>
 								</li>
 								<li class="footer__item">
-									<a href="" class="footer__link">
+									<a
+										href="./pages/location.html"
+										class="footer__link">
 										Location</a
 									>
 								</li>
 								<li class="footer__item">
-									<a href="" class="footer__link"> Careers</a>
+									<a
+										href="./pages/careers.html"
+										class="footer__link">
+										Careers</a
+									>
 								</li>
 							</ul>
 						</div>
