--- a/pages/careers.html
+++ b/pages/careers.html
@@ -35,16 +35,12 @@
 									</a>
 								</li>
 								<li class="header__nav-item">
-									<a
-										class="header__nav-link"
-										href="../pages/location.html">
+									<a class="header__nav-link" href="../pages/location.html">
 										Location
 									</a>
 								</li>
 								<li class="header__nav-item">
-									<a
-										class="header__nav-link"
-										href="../pages/careers.html">
+									<a class="header__nav-link" href="../pages/careers.html">
 										Career
 									</a>
 								</li>
@@ -83,6 +79,7 @@
 								scooter, your traveling distance, and many more
 								things all in an easy to use app.
 							</p>
+							<a class="offers__btn btn" href="">Learn More</a>
 						</div>
 						<img
 							class="offers__img"
@@ -90,28 +87,7 @@
 							alt="easy"
 							width="445"
 							height="445"
-							src="./images/png/easy.png 1x, ./images/png/easy@2x.png 2x" />
-					</div>
-					<div class="offers__wrap info-right">
-						<div class="offers__info">
-							<h2 class="offers__title">
-								Easy to use riding telemetry
-							</h2>
-							<p class="offers__subtitle">
-								The Scoot app is available with riding
-								telemetry. This means it can show you your
-								average speed, how long you've been using the
-								scooter, your traveling distance, and many more
-								things all in an easy to use app.
-							</p>
-						</div>
-						<img
-							class="offers__img"
-							src="../images/png/city.png"
-							alt="city"
-							width="445"
-							height="445"
-							src="./images/png/city.png 1x, ./images/png/city@2x.png 2x" />
+							src="../images/png/easy.png 1x, ../images/png/easy@2x.png 2x" />
 					</div>
 				</div>
 			</section>
@@ -184,166 +160,65 @@
 				</div>
 			</section>
 
-			<!-- FAQ -->
-			<section class="faq">
+			<!-- JOBS -->
+			<section class="job">
 				<div class="container">
-					<div class="faq__block">
-						<h2 class="faq__title">FAQs</h2>
-						<div class="faq__wrap">
-							<h3 class="faq__wrap-title">How it works</h3>
-							<ul class="faq__list">
-								<li class="faq__item">
-									<div class="title-srel">
-										<h4 class="faq__item-title">
-											How do I download the app?
-										</h4>
-										<img
-											class="streltop"
-											src="../images/svg/streltop.svg"
-											alt="strelka" />
-										<img
-											class="strelbottom"
-											src="../images/svg/strelbottom.svg"
-											alt="strelka" />
-									</div>
-									<p class="faq__item-subt subt-hidden">
-										To download the Scoot app, you can
-										search “Scoot” in both the App and
-										Google Play stores. An even simpler way
-										to do it would be to click the relevant
-										link at the bottom of this page and
-										you’ll be re-directed to the correct
-										page.
-									</p>
-								</li>
-								<li class="faq__item">
-									<div class="title-srel">
-										<h4 class="faq__item-title">
-											How do I download the app?
-										</h4>
-										<img
-											class="streltop"
-											src="../images/svg/streltop.svg"
-											alt="strelka" />
-										<img
-											class="strelbottom"
-											src="../images/svg/strelbottom.svg"
-											alt="strelka" />
-									</div>
-									<p class="faq__item-subt subt-hidden">
-										To download the Scoot app, you can
-										search “Scoot” in both the App and
-										Google Play stores. An even simpler way
-										to do it would be to click the relevant
-										link at the bottom of this page and
-										you’ll be re-directed to the correct
-										page.
-									</p>
-								</li>
-								<li class="faq__item">
-									<div class="title-srel">
-										<h4 class="faq__item-title">
-											How do I download the app?
-										</h4>
-										<img
-											class="streltop"
-											src="../images/svg/streltop.svg"
-											alt="strelka" />
-										<img
-											class="strelbottom"
-											src="../images/svg/strelbottom.svg"
-											alt="strelka" />
-									</div>
-									<p class="faq__item-subt subt-hidden">
-										To download the Scoot app, you can
-										search “Scoot” in both the App and
-										Google Play stores. An even simpler way
-										to do it would be to click the relevant
-										link at the bottom of this page and
-										you’ll be re-directed to the correct
-										page.
-									</p>
-								</li>
-							</ul>
-						</div>
-						<div class="faq__wrap">
-							<h3 class="faq__wrap-title">How it works</h3>
-							<ul class="faq__list">
-								<li class="faq__item">
-									<div class="title-srel">
-										<h4 class="faq__item-title">
-											How do I download the app?
-										</h4>
-										<img
-											class="streltop"
-											src="../images/svg/streltop.svg"
-											alt="strelka" />
-										<img
-											class="strelbottom"
-											src="../images/svg/strelbottom.svg"
-											alt="strelka" />
-									</div>
-									<p class="faq__item-subt subt-hidden">
-										To download the Scoot app, you can
-										search “Scoot” in both the App and
-										Google Play stores. An even simpler way
-										to do it would be to click the relevant
-										link at the bottom of this page and
-										you’ll be re-directed to the correct
-										page.
-									</p>
-								</li>
-								<li class="faq__item">
-									<div class="title-srel">
-										<h4 class="faq__item-title">
-											How do I download the app?
-										</h4>
-										<img
-											class="streltop"
-											src="../images/svg/streltop.svg"
-											alt="strelka" />
-										<img
-											class="strelbottom"
-											src="../images/svg/strelbottom.svg"
-											alt="strelka" />
-									</div>
-									<p class="faq__item-subt subt-hidden">
-										To download the Scoot app, you can
-										search “Scoot” in both the App and
-										Google Play stores. An even simpler way
-										to do it would be to click the relevant
-										link at the bottom of this page and
-										you’ll be re-directed to the correct
-										page.
-									</p>
-								</li>
-								<li class="faq__item">
-									<div class="title-srel">
-										<h4 class="faq__item-title">
-											How do I download the app?
-										</h4>
-										<img
-											class="streltop"
-											src="../images/svg/streltop.svg"
-											alt="strelka" />
-										<img
-											class="strelbottom"
-											src="../images/svg/strelbottom.svg"
-											alt="strelka" />
-									</div>
-									<p class="faq__item-subt subt-hidden">
-										To download the Scoot app, you can
-										search “Scoot” in both the App and
-										Google Play stores. An even simpler way
-										to do it would be to click the relevant
-										link at the bottom of this page and
-										you’ll be re-directed to the correct
-										page.
-									</p>
-								</li>
-							</ul>
-						</div>
-					</div>
+					<ul class="job__list">
+						<li class="job__item">
+							<div class="job__item-info">
+								<h4 class="job__item-type">General Manager</h4>
+								<p class="job__item-location">
+									Jakarta, Indonesia
+								</p>
+							</div>
+							<a class="job__btn btn" href="">Learn More</a>
+						</li>
+						<li class="job__item">
+							<div class="job__item-info">
+								<h4 class="job__item-type">General Manager</h4>
+								<p class="job__item-location">
+									Jakarta, Indonesia
+								</p>
+							</div>
+							<a class="job__btn btn" href="">Learn More</a>
+						</li>
+						<li class="job__item">
+							<div class="job__item-info">
+								<h4 class="job__item-type">General Manager</h4>
+								<p class="job__item-location">
+									Jakarta, Indonesia
+								</p>
+							</div>
+							<a class="job__btn btn" href="">Learn More</a>
+						</li>
+						<li class="job__item">
+							<div class="job__item-info">
+								<h4 class="job__item-type">General Manager</h4>
+								<p class="job__item-location">
+									Jakarta, Indonesia
+								</p>
+							</div>
+							<a class="job__btn btn" href="">Learn More</a>
+						</li>
+						<li class="job__item">
+							<div class="job__item-info">
+								<h4 class="job__item-type">General Manager</h4>
+								<p class="job__item-location">
+									Jakarta, Indonesia
+								</p>
+							</div>
+							<a class="job__btn btn" href="">Learn More</a>
+						</li>
+						<li class="job__item">
+							<div class="job__item-info">
+								<h4 class="job__item-type">General Manager</h4>
+								<p class="job__item-location">
+									Jakarta, Indonesia
+								</p>
+							</div>
+							<a class="job__btn btn" href="">Learn More</a>
+						</li>
+					</ul>
 				</div>
 			</section>
 		</main>
