--- a/pages/careers.html
+++ b/pages/careers.html
@@ -35,12 +35,16 @@
 									</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-link" href="../pages/location.html">
+									<a
+										class="header__nav-link"
+										href="../pages/location.html">
 										Location
 									</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-link" href="../pages/careers.html">
+									<a
+										class="header__nav-link"
+										href="../pages/careers.html">
 										Career
 									</a>
 								</li>
@@ -54,11 +58,11 @@
 		<!-- MAIN -->
 		<main class="main">
 			<!-- MAIN-TOP -->
-			<section class="main-top">
+			<section class="main-top career-bg">
 				<div class="main-top__block">
 					<div class="container">
 						<div class="main-top__block-info">
-							<h1 class="main-top__title title">About</h1>
+							<h1 class="main-top__title title">Careers</h1>
 						</div>
 					</div>
 				</div>
@@ -83,18 +87,18 @@
 						</div>
 						<img
 							class="offers__img"
-							src="../images/png/easy.png"
+							src="../images/png/care.png"
 							alt="easy"
 							width="445"
 							height="445"
-							src="../images/png/easy.png 1x, ../images/png/easy@2x.png 2x" />
+							src="../images/png/care.png 1x, ../images/png/care@2x.png 2x" />
 					</div>
 				</div>
 			</section>
 			<!-- VALUES -->
 			<section class="category">
 				<div class="container">
-					<h2 class="category__title">Our values</h2>
+					<h2 class="category__title">Why join us?</h2>
 					<ul class="category__list">
 						<li class="category__item">
 							<div class="category__item-block">
@@ -120,16 +124,16 @@
 							<div class="category__item-block">
 								<img
 									class="category__item-img"
-									src="../images/png/tech.png"
+									src="../images/png/integrity.png"
 									alt="tech"
 									width="240"
 									height="240"
 									srcset="
-										../images/png/tech.png    1x,
-										../images/png/tech@2x.png 2x
+										../images/png/integrity.png    1x,
+										../images/png/integrity@2x.png 2x
 									" />
 							</div>
-							<h4 class="category__item-title">Our tech</h4>
+							<h4 class="category__item-title">Our integrity</h4>
 							<p class="category__item-subt">
 								We’re using cutting edge technology to drive
 								accessible urban transportation forward. Our
@@ -140,16 +144,16 @@
 							<div class="category__item-block">
 								<img
 									class="category__item-img"
-									src="../images/png/tech.png"
+									src="../images/png/community.png"
 									alt="tech"
 									width="240"
 									height="240"
 									srcset="
-										../images/png/tech.png    1x,
-										../images/png/tech@2x.png 2x
+										../images/png/community.png    1x,
+										../images/png/community@2x.png 2x
 									" />
 							</div>
-							<h4 class="category__item-title">Our tech</h4>
+							<h4 class="category__item-title">Our community</h4>
 							<p class="category__item-subt">
 								We’re using cutting edge technology to drive
 								accessible urban transportation forward. Our
@@ -175,7 +179,36 @@
 						</li>
 						<li class="job__item">
 							<div class="job__item-info">
-								<h4 class="job__item-type">General Manager</h4>
+								<h4 class="job__item-type">UI/UX Designer</h4>
+								<p class="job__item-location">
+									Yokohama, Japan
+								</p>
+							</div>
+							<a class="job__btn btn" href="">Learn More</a>
+						</li>
+						<li class="job__item">
+							<div class="job__item-info">
+								<h4 class="job__item-type">
+									Blog Content Copywriter
+								</h4>
+								<p class="job__item-location">
+									New York, United States
+								</p>
+							</div>
+							<a class="job__btn btn" href="">Learn More</a>
+						</li>
+						<li class="job__item">
+							<div class="job__item-info">
+								<h4 class="job__item-type">Graphic Designer</h4>
+								<p class="job__item-location">
+									New York, United States
+								</p>
+							</div>
+							<a class="job__btn btn" href="">Learn More</a>
+						</li>
+						<li class="job__item">
+							<div class="job__item-info">
+								<h4 class="job__item-type">Fleet Supervisor</h4>
 								<p class="job__item-location">
 									Jakarta, Indonesia
 								</p>
@@ -184,36 +217,9 @@
 						</li>
 						<li class="job__item">
 							<div class="job__item-info">
-								<h4 class="job__item-type">General Manager</h4>
+								<h4 class="job__item-type">UX Analyst</h4>
 								<p class="job__item-location">
-									Jakarta, Indonesia
-								</p>
-							</div>
-							<a class="job__btn btn" href="">Learn More</a>
-						</li>
-						<li class="job__item">
-							<div class="job__item-info">
-								<h4 class="job__item-type">General Manager</h4>
-								<p class="job__item-location">
-									Jakarta, Indonesia
-								</p>
-							</div>
-							<a class="job__btn btn" href="">Learn More</a>
-						</li>
-						<li class="job__item">
-							<div class="job__item-info">
-								<h4 class="job__item-type">General Manager</h4>
-								<p class="job__item-location">
-									Jakarta, Indonesia
-								</p>
-							</div>
-							<a class="job__btn btn" href="">Learn More</a>
-						</li>
-						<li class="job__item">
-							<div class="job__item-info">
-								<h4 class="job__item-type">General Manager</h4>
-								<p class="job__item-location">
-									Jakarta, Indonesia
+									London, United Kingdom
 								</p>
 							</div>
 							<a class="job__btn btn" href="">Learn More</a>
@@ -248,7 +254,7 @@
 				<div class="container">
 					<div class="footer__bottom-block">
 						<div class="logo-nav">
-							<a href=""
+							<a href="../index.html"
 								><img
 									class="footer__logo"
 									src="../images/svg/logo-white.svg"
@@ -256,15 +262,25 @@
 							/></a>
 							<ul class="footer__list">
 								<li class="footer__item">
-									<a href="" class="footer__link"> About</a>
+									<a
+										href="../pages/about.html"
+										class="footer__link">
+										About</a
+									>
 								</li>
 								<li class="footer__item">
-									<a href="" class="footer__link">
+									<a
+										href="../pages/location.html"
+										class="footer__link">
 										Location</a
 									>
 								</li>
 								<li class="footer__item">
-									<a href="" class="footer__link"> Careers</a>
+									<a
+										href="../pages/careers.html"
+										class="footer__link">
+										Careers</a
+									>
 								</li>
 							</ul>
 						</div>
