--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
 									</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-link" href="">
+									<a
+										class="header__nav-link"
+										href="./pages/location.html">
 										Location
 									</a>
 								</li>
 								<li class="header__nav-item">
-									<a class="header__nav-link" href="">
+									<a
+										class="header__nav-link"
+										href="./pages/careers.html">
 										Career
 									</a>
 								</li>
@@ -104,13 +108,13 @@
 								class="cards__item-img" />
 							<div class="cards__item-info">
 								<h4 class="cards__item-title">
-									Locate with app
+									Pick your scooter
 								</h4>
 								<p class="cards__item-subtitle">
-									Use the app to find the nearest scooter to
-									you. We are continuously placing scooters in
-									the areas with most demand, so one should
-									never be too far away.
+									We show the most important info for the
+									scooters closest to you. So you know how
+									much charge they have left and can see
+									roughly how much it will cost.
 								</p>
 							</div>
 						</li>
@@ -121,13 +125,13 @@
 								class="cards__item-img" />
 							<div class="cards__item-info">
 								<h4 class="cards__item-title">
-									Locate with app
+									Enjoy the ride
 								</h4>
 								<p class="cards__item-subtitle">
-									Use the app to find the nearest scooter to
-									you. We are continuously placing scooters in
-									the areas with most demand, so one should
-									never be too far away.
+									Scan the QR code and the bike will unlock.
+									Retract the cable lock, put on a helmet, and
+									you’re off! Always lock bikes away from
+									walkways and accessibility ramps.
 								</p>
 							</div>
 						</li>
@@ -152,25 +156,27 @@
 							</p>
 							<a class="offers__btn btn" href="">Learn More</a>
 						</div>
-						<img
-							class="offers__img"
-							src="./images/png/easy.png"
-							alt="easy"
-							width="445"
-							height="445"
-							src="./images/png/easy.png 1x, ./images/png/easy@2x.png 2x" />
+						<div class="offers__img-block">
+							<img
+								class="offers__img"
+								src="./images/png/easy.png"
+								alt="easy"
+								width="445"
+								height="445"
+								src="./images/png/easy.png 1x, ./images/png/easy@2x.png 2x" />
+						</div>
 					</div>
 					<div class="offers__wrap info-right">
 						<div class="offers__info">
 							<h2 class="offers__title">
-								Easy to use riding telemetry
+								Coming to a city near you
 							</h2>
 							<p class="offers__subtitle">
-								The Scoot app is available with riding
-								telemetry. This means it can show you your
-								average speed, how long you've been using the
-								scooter, your traveling distance, and many more
-								things all in an easy to use app.
+								Scoot is available in 4 major cities so far.
+								We’re expanding rapidly, so be sure to let us
+								know if you want to see us in your hometown.
+								We’re aiming to let our scooters loose on 23
+								cities over the coming year.
 							</p>
 							<a class="offers__btn btn" href="">Learn More</a>
 						</div>
@@ -184,15 +190,13 @@
 					</div>
 					<div class="offers__wrap">
 						<div class="offers__info">
-							<h2 class="offers__title">
-								Easy to use riding telemetry
-							</h2>
+							<h2 class="offers__title">Zero hassle payments</h2>
 							<p class="offers__subtitle">
-								The Scoot app is available with riding
-								telemetry. This means it can show you your
-								average speed, how long you've been using the
-								scooter, your traveling distance, and many more
-								things all in an easy to use app.
+								Our payment is as easy as one two three. We
+								accept most credit cards and debit cards. You
+								can also link your PayPal account inside the
+								app. Need to pay later? No worries! You can
+								defer payment for up to a month.
 							</p>
 							<a class="offers__btn btn" href="">Learn More</a>
 						</div>
