--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
 								<li class="header__nav-item">
 									<a
 										class="header__nav-link"
-										href="./about.html">
+										href="../about.html">
 										About
 									</a>
 								</li>
@@ -58,7 +58,7 @@
 		<!-- MAIN -->
 		<main class="main">
 			<!-- MAIN-TOP -->
-			<section class="main-top">
+			<section class="main-top about-bg">
 				<div class="main-top__block">
 					<div class="container">
 						<div class="main-top__block-info">
@@ -74,44 +74,40 @@
 					<div class="offers__wrap">
 						<div class="offers__info">
 							<h2 class="offers__title">
-								Easy to use riding telemetry
+								Mobility for the digital era
 							</h2>
 							<p class="offers__subtitle">
-								The Scoot app is available with riding
-								telemetry. This means it can show you your
-								average speed, how long you've been using the
-								scooter, your traveling distance, and many more
-								things all in an easy to use app.
+								Getting around should be simple (and even fun!)
+								for everyone. We embrace technology to provide
+								low cost, smart access to scooters at your
+								fingertips.
 							</p>
 						</div>
 						<img
 							class="offers__img"
-							src="../images/png/easy.png"
+							src="../images/png/mobilty.png"
 							alt="easy"
 							width="445"
 							height="445"
-							src="./images/png/easy.png 1x, ./images/png/easy@2x.png 2x" />
+							src="./images/png/mobilty.png 1x, ./images/png/mobilty@2x.png 2x" />
 					</div>
 					<div class="offers__wrap info-right">
 						<div class="offers__info">
-							<h2 class="offers__title">
-								Easy to use riding telemetry
-							</h2>
+							<h2 class="offers__title">Better urban living</h2>
 							<p class="offers__subtitle">
-								The Scoot app is available with riding
-								telemetry. This means it can show you your
-								average speed, how long you've been using the
-								scooter, your traveling distance, and many more
-								things all in an easy to use app.
+								We’re helping connect cities and bring people
+								closer together. Our scooters are also
+								fully-electric and we offset the minimal carbon
+								footprint for each ride.
 							</p>
 						</div>
 						<img
 							class="offers__img"
-							src="../images/png/city.png"
+							src="../images/png/urban.png"
 							alt="city"
 							width="445"
 							height="445"
-							src="./images/png/city.png 1x, ./images/png/city@2x.png 2x" />
+							src="./images/png/urban.png 1x, ./images/png/urban@2x.png 2x" />
 					</div>
 				</div>
 			</section>
@@ -144,40 +140,40 @@
 							<div class="category__item-block">
 								<img
 									class="category__item-img"
-									src="../images/png/tech.png"
+									src="../images/png/integrity.png"
 									alt="tech"
 									width="240"
 									height="240"
 									srcset="
-										../images/png/tech.png    1x,
-										../images/png/tech@2x.png 2x
+										../images/png/integrity.png    1x,
+										../images/png/integrity@2x.png 2x
 									" />
 							</div>
-							<h4 class="category__item-title">Our tech</h4>
+							<h4 class="category__item-title">Our integrity</h4>
 							<p class="category__item-subt">
-								We’re using cutting edge technology to drive
-								accessible urban transportation forward. Our
-								fully electric scooters are a joy to ride!
+								We are fully committed to deliver a great yet
+								safe, sustainable micro-mobility experience in
+								every city we serve.
 							</p>
 						</li>
 						<li class="category__item">
 							<div class="category__item-block">
 								<img
 									class="category__item-img"
-									src="../images/png/tech.png"
+									src="../images/png/community.png"
 									alt="tech"
 									width="240"
 									height="240"
 									srcset="
-										../images/png/tech.png    1x,
-										../images/png/tech@2x.png 2x
+										../images/png/community.png    1x,
+										../images/png/community@2x.png 2x
 									" />
 							</div>
-							<h4 class="category__item-title">Our tech</h4>
+							<h4 class="category__item-title">Our community</h4>
 							<p class="category__item-subt">
-								We’re using cutting edge technology to drive
-								accessible urban transportation forward. Our
-								fully electric scooters are a joy to ride!
+								We support every community we serve. All workers
+								are paid a living wage based on their location
+								and are Scoot employees.
 							</p>
 						</li>
 					</ul>
@@ -219,7 +215,7 @@
 								<li class="faq__item">
 									<div class="title-srel">
 										<h4 class="faq__item-title">
-											How do I download the app?
+											Can I find a nearby Scoots?
 										</h4>
 										<img
 											class="streltop"
@@ -243,7 +239,7 @@
 								<li class="faq__item">
 									<div class="title-srel">
 										<h4 class="faq__item-title">
-											How do I download the app?
+											Do I need a license to ride?
 										</h4>
 										<img
 											class="streltop"
@@ -267,12 +263,12 @@
 							</ul>
 						</div>
 						<div class="faq__wrap">
-							<h3 class="faq__wrap-title">How it works</h3>
+							<h3 class="faq__wrap-title">Safe driving</h3>
 							<ul class="faq__list">
 								<li class="faq__item">
 									<div class="title-srel">
 										<h4 class="faq__item-title">
-											How do I download the app?
+											Should I wear a helmet?
 										</h4>
 										<img
 											class="streltop"
@@ -296,7 +292,7 @@
 								<li class="faq__item">
 									<div class="title-srel">
 										<h4 class="faq__item-title">
-											How do I download the app?
+											How about the rules & regulations?
 										</h4>
 										<img
 											class="streltop"
@@ -320,7 +316,7 @@
 								<li class="faq__item">
 									<div class="title-srel">
 										<h4 class="faq__item-title">
-											How do I download the app?
+											What if I damage my Scoot?
 										</h4>
 										<img
 											class="streltop"
@@ -373,7 +369,7 @@
 				<div class="container">
 					<div class="footer__bottom-block">
 						<div class="logo-nav">
-							<a href=""
+							<a href="../index.html"
 								><img
 									class="footer__logo"
 									src="../images/svg/logo-white.svg"
@@ -381,15 +377,25 @@
 							/></a>
 							<ul class="footer__list">
 								<li class="footer__item">
-									<a href="" class="footer__link"> About</a>
+									<a
+										href="../pages/about.html"
+										class="footer__link">
+										About</a
+									>
 								</li>
 								<li class="footer__item">
-									<a href="" class="footer__link">
+									<a
+										href="../pages/location.html"
+										class="footer__link">
 										Location</a
 									>
 								</li>
 								<li class="footer__item">
-									<a href="" class="footer__link"> Careers</a>
+									<a
+										href="../pages/careers.html"
+										class="footer__link">
+										Careers</a
+									>
 								</li>
 							</ul>
 						</div>
