--- a/pages/location.html
+++ b/pages/location.html
@@ -58,11 +58,11 @@
 		<!-- MAIN -->
 		<main class="main">
 			<!-- MAIN-TOP -->
-			<section class="main-top">
+			<section class="main-top career-bg">
 				<div class="main-top__block">
 					<div class="container">
 						<div class="main-top__block-info">
-							<h1 class="main-top__title title">About</h1>
+							<h1 class="main-top__title title">Locations</h1>
 						</div>
 					</div>
 				</div>
@@ -97,13 +97,13 @@
 								<a class="cities__link" href=""> New York </a>
 							</li>
 							<li class="cities__item">
-								<a class="cities__link" href=""> New York </a>
+								<a class="cities__link" href=""> London </a>
 							</li>
 							<li class="cities__item">
-								<a class="cities__link" href=""> New York </a>
+								<a class="cities__link" href=""> Jakarta </a>
 							</li>
 							<li class="cities__item">
-								<a class="cities__link" href=""> New York </a>
+								<a class="cities__link" href=""> Yokohama </a>
 							</li>
 						</ul>
 					</div>
@@ -153,7 +153,7 @@
 				<div class="container">
 					<div class="footer__bottom-block">
 						<div class="logo-nav">
-							<a href=""
+							<a href="../index.html"
 								><img
 									class="footer__logo"
 									src="../images/svg/logo-white.svg"
@@ -161,15 +161,25 @@
 							/></a>
 							<ul class="footer__list">
 								<li class="footer__item">
-									<a href="" class="footer__link"> About</a>
+									<a
+										href="../pages/about.html"
+										class="footer__link">
+										About</a
+									>
 								</li>
 								<li class="footer__item">
-									<a href="" class="footer__link">
+									<a
+										href="../pages/location.html"
+										class="footer__link">
 										Location</a
 									>
 								</li>
 								<li class="footer__item">
-									<a href="" class="footer__link"> Careers</a>
+									<a
+										href="../pages/careers.html"
+										class="footer__link">
+										Careers</a
+									>
 								</li>
 							</ul>
 						</div>
