--- a/pages/about.html
+++ b/pages/about.html
@@ -30,7 +30,7 @@
 								<li class="header__nav-item">
 									<a
 										class="header__nav-link"
-										href="../about.html">
+										href="../pages/about.html">
 										About
 									</a>
 								</li>
@@ -85,11 +85,11 @@
 						</div>
 						<img
 							class="offers__img"
-							src="../images/png/mobilty.png"
+							src="../images/png/mobility.png"
 							alt="easy"
 							width="445"
 							height="445"
-							src="./images/png/mobilty.png 1x, ./images/png/mobilty@2x.png 2x" />
+							src="./images/png/mobility.png 1x, ./images/png/mobility@2x.png 2x" />
 					</div>
 					<div class="offers__wrap info-right">
 						<div class="offers__info">
